--- a/src/app/components/clientes/clientes.component.css
+++ b/src/app/components/clientes/clientes.component.css
@@ -17,7 +17,7 @@
 
 .btn-emple {
     width: 170px;
-    height: 30px;
+    height: 40px;
     margin-left: 15px;
     font-size: 13px;
     color: #ffffff;
@@ -32,6 +32,10 @@
 
 /* estilos buscador */
 
+.divBuscador{
+  margin-top: 20px;
+}
+
 .abc {
     margin-right: 15px;
 }
@@ -41,14 +45,14 @@
 }
 
 .imput-buscar {
-    height: 30px;
+    height: 40px;
     padding-left: 10px;
     padding-right: 10px;
 }
 
 .boton-buscar {
     width: 70px;
-    height: 30px;
+    height: 40px;
     color: #ffffff;
 }
 
