--- a/src/app/components/empresa/empresa.component.html
+++ b/src/app/components/empresa/empresa.component.html
@@ -40,7 +40,7 @@
                     </ng-template>
                     <ng-template pTemplate="body" let-empresa>
                         <tr>
-                            <td data-titulo="#"> {{ empresa.id }} </td>
+                            <td data-titulo="#"> {{ empresa.idEmpresa }} </td>
                             <td data-titulo="Nombre"> {{ empresa.nombre }} </td>
                             <td data-titulo="Dirección"> {{ empresa.direccion }} </td>
                             <td data-titulo="Teléfono"> {{ empresa.telefono }} </td>
@@ -58,7 +58,7 @@
     </div>
     <p-toast [style]="{width: '80vw'}"></p-toast>
 
-    <p-toast position="top-center" (onClose)="onReject()" key="a"  [baseZIndex]="5000">
+    <p-toast position="center" (onClose)="onReject()" key="a"  [baseZIndex]="5000">
       <ng-template let-message pTemplate="message">
           <div class="p-flex p-flex-column" style="flex: 1">
               <div class="p-text-center-botones">
