--- a/src/app/components/precios/precios.component.css
+++ b/src/app/components/precios/precios.component.css
@@ -21,7 +21,7 @@ p-toast {
 
 .btn-precio {
     width: 150px;
-    height: 30px;
+    height: 40px;
     margin-left: 15px;
     font-size: 13px;
     text-transform: uppercase;
@@ -60,6 +60,10 @@ p-toast {
 
 /* estilos buscador */
 
+.divBuscador{
+  margin-top: 20px;
+}
+
 .abc {
     margin-right: 15px;
 }
@@ -69,14 +73,14 @@ p-toast {
 }
 
 .imput-buscar {
-    height: 30px;
+    height: 40px;
     padding-left: 10px;
     padding-right: 10px;
 }
 
 .boton-buscar {
     width: 70px;
-    height: 30px;
+    height: 40px;
 }
 
 ::placeholder {
