--- a/src/app/components/almacen/almacen.component.css
+++ b/src/app/components/almacen/almacen.component.css
@@ -17,7 +17,7 @@
 
  .btn-emple {
      width: 170px;
-     height: 30px;
+     height: 40px;
      margin-left: 15px;
      font-size: 13px;
      color: #ffffff;
@@ -28,7 +28,13 @@
      font-size: 13px;
      margin-right: 6px;
  }
+
+
  /* estilos buscador */
+
+  .divBuscador{
+    margin-top: 20px;
+  }
 
  .abc {
      margin-right: 15px;
@@ -39,14 +45,14 @@
  }
 
  .imput-buscar {
-     height: 30px;
+     height: 40px;
      padding-left: 10px;
      padding-right: 10px;
  }
 
  .boton-buscar {
      width: 70px;
-     height: 30px;
+     height: 40px;
      color: #ffffff;
  }
 
