--- a/src/app/components/creditos/creditos.component.html
+++ b/src/app/components/creditos/creditos.component.html
@@ -5,9 +5,26 @@
             Lista de créditos
         </h2>
     </div>
+    <div class="contenedor2">
+      <div class="col-md-12">
+          <div class="btn">
+              <button (click)="showPositionDialog(creditoModel)" type="button" class="btn btn-primary btn-servicio">
+               <i class="pi pi-dollar icono-btn"></i>Agregar precio</button>
+          </div>
+          <app-dialog-service #agregarDialogServicio (verCredito)="addItem($event)"></app-dialog-service>
+      </div>
+  </div>
+  <div class="row divBuscador">
+    <div class="col-md-4 ml-3 mb-2 abc">
+        <input type="search" placeholder="Ingresar descripción" id="buscador" name="buscador" class="form-control imput-buscar" [value]="buscarDescripcion" (input)="buscarDescripcion = $event.target.value">
+    </div>
+    <div class="col-md-1 div-boton">
+        <button class="btn btn-primary boton-buscar" (click)="buscarServicio()">Buscar</button>
+    </div>
+</div>
 
     <div class="card">
-        <p-table [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+        <p-table [(value)]="creditos" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
             <ng-template pTemplate="header">
                 <tr class="header">
                     <th> # </th>
@@ -21,16 +38,16 @@
                     <th></th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body">
+            <ng-template pTemplate="body" let-creditos>
                 <tr>
-                    <td data-titulo="#">dcsd</td>
-                    <td data-titulo="Fecha">cdvcd</td>
-                    <td data-titulo="Clente">vdvdv</td>
-                    <td data-titulo="Total">vvsdv</td>
-                    <td data-titulo="Estado">sdvdvd</td>
-                    <td data-titulo="Estado">sdvdvd</td>
-                    <td data-titulo="Estado">sdvdvd</td>
-                    <td data-titulo="Estado">sdvdvd</td>
+                    <td data-titulo="#"> {{ creditos?.idCreditos }} </td>
+                    <td data-titulo="Cliente"> {{ creditos?.servicio?.idClientes }} </td>
+                    <td data-titulo="Descripción"> {{ creditos?.idCreditos }} </td>
+                    <td data-titulo="Fecha"> {{ creditos?.fecha | date }} </td>
+                    <td data-titulo="Total"> {{ creditos?.servicio?.valor |currency }}  </td>
+                    <td data-titulo="Abono"> {{ creditos?.abono |currency}} </td>
+                    <td data-titulo="Adeuda"> {{ creditos?.deuda |currency}} </td>
+                    <td data-titulo="Estado"> {{ creditos?.servicio?.estado}} </td>
                     <td>
                         <i (click)="showPositionDialog('center')" class="pi pi-list btn-outline-primary icono-table"></i>
                         <i class="pi pi-trash btn-outline-danger icono-table"></i>
@@ -40,33 +57,5 @@
         </p-table>
     </div>
 
-    <div class="p-col">
-        <p-button (click)="showPositionDialog('center')" icon="pi pi-arrow-right" label="Left" styleClass="p-button-warning"></p-button>
-    </div>
-    <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '40vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
-        <ng-template pTemplate="header">
-            ABONOS
-        </ng-template>
-        <div class="form">
-            <form>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="abono" class="form-label">Abono</label>
-                        <input type="number" class="form-control" id="abono">
-                    </div>
 
-                    <div class="form-group col-md-6">
-                        <label for="estado" class="form-label">Estado</label>
-                        <select id="estado" class="form-control">
-                      <option selected>Seleccionar...</option>
-                      <option>...</option>
-                      </select>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <p-footer>
-            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
-        </p-footer>
-    </p-dialog>
 </div>
