--- a/src/app/components/empleados/agregar-dialog/agregar-dialog.component.html
+++ b/src/app/components/empleados/agregar-dialog/agregar-dialog.component.html
@@ -61,7 +61,7 @@
                 <div class="form-group col-md-6">
                     <label for="idEmpresa" class="form-label">Empresa</label>
                     <select class="form-control" name="idEmpresa" id="idEmpresa" [disabled]="empresa.length === 0" [class.is-invalid]="idEmpresa.invalid && idEmpresa.touched" [(ngModel)]="employee.idEmpresa" #idEmpresa="ngModel" required>
-                      <option *ngFor="let item of empresa" [value]="item.id">{{item.nombre}} </option>
+                      <option *ngFor="let item of empresa" [value]="item.idEmpresa">{{item.nombre}} </option>
                     </select>
                     <small *ngIf="idEmpresa.invalid && idEmpresa.touched" class="form-text text-danger">
                          Este campo es obligatorio
