--- a/src/app/components/precios/precios.component.html
+++ b/src/app/components/precios/precios.component.html
@@ -14,9 +14,9 @@
             <app-precio-dialog #agregarDialog (verPrecio)="addItem($event)"></app-precio-dialog>
         </div>
     </div>
-    <div class="row">
+    <div class="row divBuscador">
         <div class="col-md-4 ml-3 mb-2 abc">
-            <input type="search" placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="buscarDescripcion" (input)="buscarDescripcion = $event.target.value">
+            <input type="search" placeholder="Ingresar descripción" id="buscador" name="buscador" class="form-control imput-buscar" [value]="buscarDescripcion" (input)="buscarDescripcion = $event.target.value">
         </div>
         <div class="col-md-1 div-boton">
             <button class="btn btn-primary boton-buscar" (click)="buscarPrecio()">Buscar</button>
@@ -34,7 +34,7 @@
             </ng-template>
             <ng-template pTemplate="body" let-precios>
                 <tr>
-                    <td data-titulo="#"> {{ precios.id }} </td>
+                    <td data-titulo="#"> {{ precios.idPrecios }} </td>
                     <td data-titulo="Descripción"> {{ precios.descripcion | titlecase}} </td>
                     <td data-titulo="Valor"> {{ precios.valor | currency }} </td>
                     <td class="td-iconos">
