--- a/src/app/components/factura/factura.component.css
+++ b/src/app/components/factura/factura.component.css
@@ -76,6 +76,14 @@ label {
     justify-content: space-between;
 }
 
+input{
+  padding-left: 5px;
+  padding-right: 5px;
+}
+select{
+  padding-left: 5px;
+  padding-right: 5px;
+}
 
 /* fin estilos tabla */
 
